--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -14,7 +14,7 @@
         <meta name="robots" content="all">
 
         <title>
-            {% block title %}Best Online Training Website for Construction Industry and Other Labor Industries | pdhsafety.com
+            {% block title %}Innovative Inexpensive Accredited Online Construction Safety Training | pdhsafety.com
             {% endblock %}
         </title>
 
