--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -256,9 +256,7 @@
                         <div class="widget footer-widget mb-5 mb-lg-0">
                             <h5 class="widget-title">About Us</h5>
                             <p class="mt-3">
-                                NYC Construction Safety Training School aims to offer quality training that is relevant and useful for the construction industry and other labor industries. These efforts include offering training courses that are useful and/or necessary to achieve success
-                                                                                                                                                                                                                                                                                            and career outcomes in the construction workforce and other industries where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and
-                                                                                                                                                                                                                                                                                            instructors..
+                               NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are useful and/or necessary to achieve success and career outcomes in the construction industry where course material may be useful and applicable, annual reviews of training materials for accuracy and relevance, and development of quality staff and instructors.                                                                                                                                                                                                                         instructors..
                             </p>
                             <ul class="list-inline footer-socials">
                                 <li class="list-inline-item">
