--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="{% block meta_desc %}pdhsafety.com Innovative Inexpensive Accessible Accredited Online Construction Safety Training  for Engineers, Architects, Managers and Construction Safety Professional (CSP ASP CHST and Candidates) {% endblock %}">
+        <meta name="description" content="{% block meta_desc %}pdhsafety.com Innovative Inexpensive Accessible Accredited Online Construction Safety Training PDH CEU for Engineers, Architects, Managers and Construction Safety Professional (CSP ASP CHST and Candidates) {% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
         <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
         <meta name="robots" content="all">
