--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        IACET CEUs Credits
+                                        IACET CEUs Credit
                                     </h4>
                                 </div>
                             </div>
@@ -70,7 +70,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Easy to take classes
+                                        Easy to take classes from any device 
                                     </h4>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Two years of use for each class
+                                        Two years of access for each class
                                     </h4>
                                 </div>
                             </div>
