--- a/app_cart/templates/order.html
+++ b/app_cart/templates/order.html
@@ -32,7 +32,7 @@
                                                     <address>
                                                     <strong>Invoiced From</strong><br>
                                                     NYC Construction Safety Training, LLC.<br>
-                                                    nyccst@construction-safety-nyc.com<br>
+                                                    mail@pdhsafety.com<br>
                                                     <abbr title="Phone">P:</abbr> 914-473-6791
                                                 </address>
                                                 </div>
