--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -30,7 +30,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-heading center-heading">
-                        <span class="subheading">Have any query?</span>
+                        <h3>Have any query?</h3>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                         <div class="col-lg-12 col-md-6">
                             <div class="contact-item">
                                 <p>Email Us</p>
-                                <h4>nyccst@construction-safety-nyc.com</h4>
+                                <h4>mail@pdhsafety.com</h4>
                             </div>
                         </div>
                         <div class="col-lg-12 col-md-6">
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="col-lg-8">
-                    <form class="contact__form form-row " method="POST" action="mail.php" id="contactForm">
+                    <form class="contact__form form-row " method="POST" action="#" id="contactForm">
                         <div class="row">
                             <div class="col-12">
                                 <div class="alert alert-success contact__msg" style="display: none" role="alert">
