--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -114,7 +114,7 @@
                                 </div>
                                 <div class="card-body">
                                     If you are qualified for an SST Card visit
-                                    <a href="https://construction-safety-nyc.com/">construction-safety-nyc.com</a>
+                                    <a href="https://pdhsafety.com/">pdhsafety.com</a>
                                     or, please
                                     <a href="{% url 'student_registration' %}">
                                         <strong>click here</strong>
