--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -10,14 +10,14 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="page-header-content">
-                        <h1>Card Verification</h1>
+                        <h1>Certificate Verification</h1>
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item">
                                 <a href="/">Home</a>
                             </li>
                             <li class="list-inline-item">/</li>
                             <li class="list-inline-item">
-                                Card Verification
+                                Certificate Verification
                             </li>
                         </ul>
                     </div>
