--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -192,7 +192,7 @@
                                     <i class="far fa-envelope"></i>
                                     <div>
                                         <strong>Email Address</strong>
-                                        nyccst@construction-safety-nyc.com
+                                        mail@pdhsafety.com
                                     </div>
                                 </li>
                                 <li>
