--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -18,7 +18,7 @@
                     <a href="javascript:" class="btn btn-success link-talk-teacher">Talk to teacher
                     </a>
 
-                    {% if module != None and next_content != None and active_content.complete == True %}
+                    {% if module != None and next_content != None  %}
 
                         {% if next_content.type == 'quiz' %}
 
