--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -5,12 +5,12 @@
 
 {% block title %}Enroll Online - 
     {{ object.title }}
-    Courses | pdhsafety.com
+    Course | pdhsafety.com
 {% endblock %}
 
 {% block meta_desc %}Learn
     {{ object.subject }}
-    OSHA Authorized Trainer instructors. Find the best online
+    from board certified (BCSP) OSHA authorized training instructors. Find the best online
     {{ object.subject }}
     classes and get certificate today. We provides group discounts. Learn Now!
 {% endblock %}
