--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -10,7 +10,7 @@
 
 {% block meta_desc %}Learn
     {{ object.subject }}
-    from board certified (BCSP) OSHA authorized training instructors. Find the best online
+    from board certified (BCSP) OSHA outreach authorized training instructors. Find the best online
     {{ object.subject }}
     classes and get certificate today. We provides group discounts. Learn Now!
 {% endblock %}
