--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -12,7 +12,7 @@
     {{ object.subject }}
     from board certified (BCSP) OSHA authorized outreach training instructors. Find the best online
     {{ object.subject }}
-    classes and get certificate today. We provides group discounts. Learn Now!
+    classes and get certified training today. We provides group discounts. Learn Now!
 {% endblock %}
 
 {% block meta_keywords %}
