--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="col-md-4 text-right">
 
-                    <a href="javascript:" class="btn btn-success link-talk-teacher">Talk to teacher
+                    <a href="javascript:" class="btn btn-success link-talk-teacher">Talk to a trainer  
                     </a>
 
                     {% if module != None and next_content != None  %}
