--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -111,17 +111,18 @@
                             <div class="card mt-2">
                                 <div class="card-header">
                                     <strong>
-                                        Where can I get my SST Card?
+                                        How can register for IACET CEU training?
                                     </strong>
                                 </div>
                                 <div class="card-body">
-                                    If you are qualified for an SST Card visit
+                                    You can browse our courses 
+
                                     <a href="https://pdhsafety.com/">pdhsafety.com</a>
                                     or, please
                                     <a href="{% url 'student_registration' %}">
                                         <strong>click here</strong>
                                     </a>
-                                    to order your card now.
+                                    to register now.
                                 </div>
                             </div>
                             <!-- end card -->
