--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -30,7 +30,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-heading center-heading">
-                        <h3>Have any query?</h3>
+                        <h3>Have any questions?</h3>
                     </div>
                 </div>
             </div>
