--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -8,13 +8,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="{% block meta_desc %}pdhsafety.com Innovative Inexpensive Accessible Accredited Online Construction Safety Training PDH CEU for Engineers, Architects, Managers and Construction Safety Professional (CSP ASP CHST and Candidates) {% endblock %}">
+        <meta name="description" content="{% block meta_desc %}100% Online on any device at anytime courses with live access to board certified (BCSP) osha-authorized trainers for Engineers, Architects and Managers  {% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
         <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
         <meta name="robots" content="all">
 
         <title>
-            {% block title %}Innovative Inexpensive Accredited Online Construction Safety Training | pdhsafety.com
+            {% block title %}Online OSHA-Compliant IACET/PDH Construction Safety Training  | pdhsafety.com
             {% endblock %}
         </title>
 
