--- a/app_students/templates/student_home.html
+++ b/app_students/templates/student_home.html
@@ -30,7 +30,7 @@
                                     </div>
                                     <div class="feature-text">
                                         <h4>
-                                            Courses Enrolled -  {{request.user.course_enrolled.count}}
+                                            Courses Enrolled -  {{request.user.my_enrolled.count}}
                                         </h4>
                                         <p>
                                             <a href="{% url 'student_courses' %}" class="btn btn-main-2">
