--- a/app_students/templates/courses/list.html
+++ b/app_students/templates/courses/list.html
@@ -9,6 +9,7 @@
 
 {% block content %}
 
+
     <section class="section-padding popular-course-slider pt-5">
         <div class="container">
             <div class="row align-items-center justify-content-center">
@@ -67,7 +68,7 @@
                                                         </h4>
                                                         <div class="rating">
                                                             <a href="{% url 'student_course_detail' course.id %}" class="py-2 px-3 badge badge-success">
-                                                                Take Course</a>
+                                                                Start Class</a>
                                                             {% if enroll.is_completed %}
                                                                 <a href="{% url 'student_course_certificate' course.id %}" class="py-2 px-3 badge badge-primary">
                                                                     View Certificate
