--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -83,6 +83,11 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'student_messages' %}">
+                                        Inbox
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="{% url 'student_edit_profile' %}">
                                        Edit Profile
                                     </a>
