--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -83,6 +83,11 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'teacher_messages' %}">
+                                        Inbox
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="#">
                                        Edit Profile
                                     </a>
